--- a/Skills-Overflow-Backend/src/main/resources/application.properties
+++ b/Skills-Overflow-Backend/src/main/resources/application.properties
@@ -10,8 +10,10 @@ spring.jpa.show-sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=mihaiapostol1995@gmail.com
+spring.mail.password=matematica1995
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+server.port=8081
