--- a/Skills-Overflow-Backend/pom.xml
+++ b/Skills-Overflow-Backend/pom.xml
@@ -98,6 +98,22 @@
 			<version>6.1.4.Final</version>
 		</dependency>
 
+<!--		chat only-->
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-messaging -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+			<version>5.2.6.RELEASE</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>5.2.6.RELEASE</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
