reset password get by id - no thread

--- a/Skills-Overflow-Backend/pom.xml
+++ b/Skills-Overflow-Backend/pom.xml
@@ -98,7 +98,15 @@
 			<version>6.1.4.Final</version>
 		</dependency>
 
-<!--		chat only-->
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.4.15.Final</version>
+		</dependency>
+
+
+		<!--		chat only-->
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-messaging -->
 		<dependency>
 			<groupId>org.springframework</groupId>
